@@ -279,7 +279,7 @@
                         </div>
                       </div>
                     </div> <!-- /.row log-mode -->
-                    <div class="row log-mode redis-mode">
+                    <div class="row log-mode filebeat-mode redis-mode">
                       <div class="col-md-12">
                         <div class="form-group">
                           <label class="col-sm-4 control-label">{{ form.redis_server.label }}</label>
@@ -290,7 +290,7 @@
                         </div>
                       </div>
                     </div> <!-- /.row log-mode -->
-                    <div class="row log-mode redis-mode">
+                    <div class="row log-mode filebeat-mode redis-mode">
                       <div class="col-md-12">
                         <div class="form-group">
                           <label class="col-sm-4 control-label">{{ form.redis_port.label }}</label>
@@ -366,7 +366,7 @@
                       </div>
                     </div>
                     <div class="form-group collapse advanced_options">
-                      <div class="row log-mode redis-mode">
+                      <div class="row log-mode filebeat-mode redis-mode">
                         <div class="col-md-12">
                           <div class="form-group">
                             <label class="col-sm-4 control-label">{{ form.redis_password.label }}</label>
