@@ -10,6 +10,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 - [API_PARSER] [CROWDSTRIKE] Delay query time of 2 minutes - to avoid missing events
 ### Changed
 - [FRONTEND] Set new default redis server to '127.0.0.5'
+- [FRONTEND] [GUI] Show redis parameters when editing a Filebeat Listener to be able to select a different Redis cache
 
 
 ## [2.10.1] - 2023-09-12
